--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
 
   <!--<button (click)="op.ListPush()">List Push</button>
   <br> <br>-->
-  <button (click)="op.ListRemove()">List Remove</button>
+  <button (click)="op.ListRemove()">Remove last ne</button>
   <br> <br>
-  <button (click)="op.ListUpdate()">List Update</button>
+  <button (click)="op.ListUpdate()">Update last one</button>
   <br> <br>
   <!--<button (click)="op.ObjUpdate()">Object update</button>
   <br> <br>
